Fix header alignment (#8079)
### WHY are these changes introduced?

Fixes #8078

### WHAT is this pull request doing?

Removes left padding from header wrapper that's no longer necessary

--- a/polaris-react/src/components/ResourceList/ResourceList.scss
+++ b/polaris-react/src/components/ResourceList/ResourceList.scss
@@ -146,7 +146,6 @@ $breakpoints-empty-search-results-height-up: '(min-height: #{breakpoint(600px)})
   text-overflow: ellipsis;
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
   flex: 1;
-  padding-left: var(--p-space-1);
   align-self: center;
 
   .HeaderWrapper-hasAlternateTool &,
